@@ -53,16 +53,18 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 626)
-(Parent-Version lpmud 3-3 625)
+(Project-Version lpmud 3-3 627)
+(Parent-Version lpmud 3-3 626)
 (Version-Log "
-  - (erq/erq.c) The erq didn't quite use correct data lengths when sending UDP
-       packets, either (thanks, Tobias!)
+  - (pkg-tls.c) Added allocation wrapper so that gnutls allocations can 
+       be traced using the driver's mechanisms (thanks, Peng!)
+  - (xalloc.c) Modified rexalloc() and xfree() to accept NULL pointers
+       as well (as the C standard demands) (Bug #0000132).
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Mon, 06 Dec 2004 22:17:04 -0700")
+(Checkin-Time "Tue, 07 Dec 2004 22:18:20 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -100,7 +102,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.83 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.689 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.690 644))
   (HISTORY (lpmud/f/49_HISTORY 1.384 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -318,7 +320,7 @@
   (src/pkg-pgsql.c (lpmud/d/b/39_pkg-pgsql. 1.3 644))
   (src/pkg-pgsql.h (lpmud/d/b/40_pkg-pgsql. 1.2 644))
   (src/pkg-tls.h (lpmud/e/b/10_pkg-tls.h 1.6 644))
-  (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.11 644))
+  (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.12 644))
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.20 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.5 644))
@@ -354,7 +356,7 @@
   (src/wiz_list.h (lpmud/1_wiz_list.h 1.5.1.7.1.3 644))
   (src/wiz_list.c (lpmud/2_wiz_list.c 1.13.1.14.1.5 644))
   (src/xalloc.h (lpmud/g/51_xalloc.h 1.24 644))
-  (src/xalloc.c (lpmud/h/0_xalloc.c 1.2.1.41 644))
+  (src/xalloc.c (lpmud/h/0_xalloc.c 1.2.1.42 644))
   (src/xptmalloc.c (lpmud/d/b/10_xptmalloc. 1.5 644))
 
   ;; Build files
