@@ -1,6 +1,12 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+07-Dec-2004 (Lars Duening)  (3.3.627)
+  - (pkg-tls.c) Added allocation wrapper so that gnutls allocations can 
+       be traced using the driver's mechanisms (thanks, Peng!)
+  - (xalloc.c) Modified rexalloc() and xfree() to accept NULL pointers
+       as well (as the C standard demands) (Bug #0000132).
+
 06-Dec-2004 (Lars Duening)  (3.3.626)
   - (erq/erq.c) The erq didn't quite use correct data lengths when sending UDP
        packets, either (thanks, Tobias!)
